# soak-placement-map-pieces

./: .gitignore  Pieces 2024 - Working Spreadsheet.csv  README.md  TODO.txt  datastore.py  main.py  placement-art.csv  pyproject.toml  test.sh
