[tool.poetry]
name = "placement-map"
version = "0.1.0"
description = ""
authors = ["Erica Abrahms <erica.abrahms@instrument.com>"]
readme = "README.md"
packages = [{include = "placement_map"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
