[tool.poetry]
name = "placement-map"
version = "0.1.0"
description = ""
authors = ["Erica Abrahms <erica.abrahms@instrument.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^10.3.0"
watchdog = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
